Changes for APR 1.3.0

  *) Support MinGW.  [John Vandenberg, Justin Erenkrantz]

  *) Implement apr_thread_yield on Unix in terms of pthread_yield or
     sched_yield. [Keisuke Nishida <keisuke.nishida gmail.com>]

  *) Provide folding in autogenerated .manifest files for Win32 builders
     using VisualStudio 2005  [William Rowe]

  *) Utilise Solaris' native atomic_* functions for apr_atomics
     where appropriate. [Colm MacCarthaigh]

  *) Make apr_socket_recvfrom initialize the port field in the from
     sockaddr.  PR 39325 [Anthony Minessale <anthmct yahoo.com>]

  *) NetBSD: Avoid leaving zombie process when using apr_signal() 
     to ignore SIGCHLD.  PR 36750.  [Todd Vierling <tv pobox.com>]

  *) Implement support for apr_proc_mutex_trylock() on Unix platforms.
     PR 38785.  [Chris Darroch <chrisd pearsoncmg.com>]

  *) APR_FIND_APR macro now supports customisable detailed checks on
     each installed apr. [Justin Erenkrantz, Colm MacCarthaigh]

  *) APR_FIND_APR macro no longer checks /usr/local/apache2/
     [Colm MacCarthaigh]

  *) Add APR_POLLSET_NOCOPY option to apr_pollset API to eliminate
     O(n)-time lookup in apr_pollset_remove() (currently implemented
     only for epoll).  [Brian Pane]

  *) Add apr_file_buffer_set() and apr_file_buffer_size_get() functions
     to support variable buffer sizes with APR file handles.
     [Colm MacCarthaigh]

  *) Add apr_file_open_flags_std[err|out|in]() functions.
     [Colm MacCarthaigh]

  *) stdio: apr_file_open_std[err|out|in]() functions now set the APR_WRITE
     or APR_READ flag as appropriate. [Colm MacCarthaigh]

  *) multicast: apr_mcast_*() no longer return APR_ENOTIMPL when invoked
     for non-UDP/RAW sockets. The caller is expected to ensure that the
     socket-type is suitable for multicast. [Colm MacCarthaigh]

  *) Add apr_sockaddr_ip_getbuf() function.  [Joe Orton]

  *) Fix handling of %pI in apr_psprintf.  [Joe Orton]
