@@ -1,5 +1,9 @@
 Changes for APR 1.3.0
 
+  *) Implement apr_threadkey_private destructors on WIN32
+     instead silently ignoring them, so that they behave like on
+     the pthreads powered platforms. [Mladen Turk]
+
   *) Support MinGW.  [John Vandenberg, Justin Erenkrantz]
 
   *) Implement apr_thread_yield on Unix in terms of pthread_yield or
